--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 dependencies:
 #  appwrite: ^11.0.1
   dart_appwrite: ^10.1.0
+  collection: ^1.18.0
 
 dev_dependencies:
   lints: ^3.0.0
